# embedded-fatfs

./: .gitignore
.github/workflows/: ci.yml
block-device-adapters/: Cargo.toml
block-device-adapters/src/: buf_stream.rs  stream_slice.rs
embedded-fatfs/: Cargo.toml
embedded-fatfs/src/: boot_sector.rs  dir.rs  dir_entry.rs  error.rs  file.rs  fs.rs  lib.rs  table.rs
examples/rp2040/: Cargo.toml
sdspi/: Cargo.toml
sdspi/src/: lib.rs
