[package]
name = "embedded-fatfs-example"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>", "Caleb Jamison <caleb@cbjamo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.5", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.9", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1", features = ["print-defmt"] }
defmt = "1"
defmt-rtt = "1.1"
static_cell = { version = "2", features = ["nightly"] }
embedded-hal-async = "1"
embedded-io-async = "0.7"
heapless = {version = "0.9", features = ["defmt-03"]}

sdspi = { version = "0.1.0", path = "../../sdspi", features = ["defmt"] }
aligned = "0.4.2"
block-device-adapters = { version = "0.2.0", path = "../../block-device-adapters" }
embedded-fatfs = { version = "0.1.0", path = "../../embedded-fatfs", default-features = false, features = ["defmt", "lfn"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
